--- a/index.qmd
+++ b/index.qmd
@@ -1,40 +1,3 @@
-::: {.content-visible when-format="pdf"}
-\begin{titlepage}
-    \centering
-    \includegraphics[width=4cm]{logo.png} \\[1.5cm]
-    {\Large \textbf{PERANCANGAN SISTEM PENDETEKSI KECURANGAN DI KOMPETISI CYBER SECURITY PADA PLATFORM GZCTF MENGGUNAKAN ALGORITMA SEQUENCE SIMILARITY ANALYSIS DAN WEIGHTED RISK SCORING}} \\[1cm]
-    {\large \textbf{PROPOSAL SKRIPSI}} \\[2cm]
-    \textbf{Disusun Oleh:} \\[0.5cm]
-    Dimas Maulana (2215354026) \\[2cm]
-    \textbf{Jurusan Teknik Informasi} \\
-    \textbf{Prodi D4 Teknologi Rekayasa Perangkat Lunak} \\
-    \textbf{Politeknik Negeri Bali} \\
-    \textbf{2026}
-\end{titlepage}
-:::
-
-::: {.content-visible when-format="html"}
-<div style="text-align: center; margin-top: 50px;">
-  <img src="logo.png" style="width: 150px; margin-bottom: 20px;">
-  <h1>PERANCANGAN SISTEM PENDETEKSI KECURANGAN DI KOMPETISI CYBER SECURITY PADA PLATFORM GZCTF MENGGUNAKAN ALGORITMA SEQUENCE SIMILARITY ANALYSIS DAN WEIGHTED RISK SCORING</h1>
-  <h3>PROPOSAL SKRIPSI</h3>
-  <br>
-  <p><strong>Disusun Oleh:</strong><br>Dimas Maulana (2215354026)</p>
-  <br>
-  <p><strong>Jurusan Teknik Informasi<br>Prodi D4 Teknologi Rekayasa Perangkat Lunak<br>Politeknik Negeri Bali<br>2026</strong></p>
-</div>
-:::
-
-{{< pagebreak >}}
-
-
-::: {.content-visible when-format="pdf"}
-\renewcommand{\contentsname}{DAFTAR ISI}
-\tableofcontents
-:::
-
-{{< pagebreak >}}
-
 ## **PENDAHULUAN**
 
 ### **Latar Belakang**
@@ -47,37 +10,40 @@ Kecurangan dalam kompetisi CTF telah menjadi isu serius yang mencederai nilai sp
 
 Saat ini, kemampuan deteksi kecurangan di GZCTF masih terbatas pada pemantauan log *submission* yang reaktif dan juga *dynamic flag* yang diinjeksikan via *environment variable* [@GZCTF_Dynamic_Flag]. Admin dapat melihat riwayat jawaban dan alamat IP, tetapi tidak ada sistem analisis otomatis yang mampu menghubungkan titik-titik data tersebut menjadi profil risiko yang utuh [@GitHub_GZCTF]. Sebagai ilustrasi, dua tim dengan alamat IP yang sama belum tentu curang; mereka mungkin menggunakan jaringan yang sama (NAT/VPN). Namun, jika kesamaan IP ini dibarengi dengan *User-Agent* yang identik dan waktu penyelesaian yang hampir bersamaan, indikasi kolaborasi ilegal menjadi sangat kuat [@PMC_CSD_Collusion].
 
-Untuk mengatasi masalah ini, pendekatan *Sequence Similarity Analysis* menjadi solusi yang relevan. Metode ini menggunakan algoritma *Longest Common Subsequence* (LCS) [@GeeksforGeeks_LCS] untuk membandingkan urutan penyelesaian tantangan antar tim. Hasil analisis ini kemudian divalidasi menggunakan *Confidence Screening Detector* (CSD) untuk mendeteksi kelompok yang terindikasi berkolusi berdasarkan konsistensi internal mereka [@PMC_CSD_Collusion]. Keunggulan utama metode ini adalah kemampuannya mendeteksi kolaborasi tanpa bergantung pada analisis konten teks yang mudah dimanipulasi.
+Untuk mengatasi masalah ini, pendekatan *Sequence Similarity Analysis* menjadi solusi yang relevan. Metode ini menggabungkan algoritma *Jaccard Similarity* [@GeeksforGeeks_Jaccard] untuk mengukur kesamaan himpunan soal yang diselesaikan dan *Longest Common Subsequence* (LCS) [@GeeksforGeeks_LCS] untuk membandingkan urutan penyelesaian tantangan antar tim. Hasil analisis ini kemudian divalidasi menggunakan *Confidence Screening Detector* (CSD) untuk mendeteksi kelompok yang terindikasi berkolusi berdasarkan konsistensi internal mereka [@PMC_CSD_Collusion]. Keunggulan utama metode ini adalah kemampuannya mendeteksi kolaborasi tanpa bergantung pada analisis konten teks yang mudah dimanipulasi.
 
-Selain analisis urutan, diperlukan metode penilaian yang objektif untuk mengukur berbagai indikator risiko perilaku. *Weighted Risk Scoring* menawarkan kerangka kerja di mana setiap parameter kecurangan—seperti kesamaan IP, interval waktu yang mencurigakan, atau kemiripan *User-Agent*—diberi bobot sesuai tingkat keparahannya. Skor risiko ini kemudian dinormalisasi ke skala seragam (misalnya 0-10), memberikan gambaran jelas kepada admin mengenai tingkat kecurigaan tiap tim. Dengan demikian, pemeriksaan manual hanya perlu dilakukan pada kasus-kasus berisiko tinggi.
+Selain analisis urutan, diperlukan metode penilaian yang objektif untuk mengukur berbagai indikator risiko perilaku. *Weighted Risk Scoring* menawarkan kerangka kerja di mana setiap parameter kecurangan—seperti kesamaan IP, interval waktu yang mencurigakan, atau kemiripan *Browser Fingerprint* [@Browser_Fingerprinting; @GitHub_WebFingerprinting; @GitHub_CreepJS] akan diberikan bobot sesuai tingkat keparahannya. Skor risiko ini kemudian dinormalisasi ke skala *score* (misalnya 0-100), memberikan gambaran jelas kepada admin mengenai tingkat kecurigaan tiap tim. Dengan demikian, pemeriksaan manual hanya perlu dilakukan pada kasus-kasus berisiko tinggi.
 
-Penelitian ini mengusulkan pengembangan sistem deteksi kecurangan hibrida yang ditanamkan langsung sebagai *middleware* dalam arsitektur ASP.NET Core GZCTF. Dengan posisi ini, setiap permintaan (*request*) peserta dapat dianalisis secara transparan sebelum masuk ke *database* PostgreSQL [@Microsoft_Middleware]. Kombinasi analisis kesamaan urutan (*Sequence Similarity*) dan penilaian risiko perilaku (*Weighted Risk Scoring*) diharapkan menghasilkan solusi yang komprehensif, efisien, serta meminimalkan tingkat kesalahan deteksi (*false positive*) [@ResearchGate_AccuracyPrecision]. Lebih dari sekadar pembaruan teknis, implementasi ini bertujuan menjamin integritas akademik di lingkungan Program Studi Sarjana Terapan Teknologi Rekayasa Perangkat Lunak, Politeknik Negeri Bali.
+Penelitian ini mengusulkan pengembangan sistem deteksi kecurangan yang ditanamkan langsung sebagai *middleware* dalam arsitektur ASP.NET Core GZCTF. Dengan posisi ini, setiap permintaan (*request*) peserta dapat dianalisis secara transparan sebelum masuk ke *database* PostgreSQL [@Microsoft_Middleware]. Kombinasi analisis kesamaan urutan (*Sequence Similarity*) dan penilaian risiko perilaku (*Weighted Risk Scoring*) diharapkan menghasilkan solusi yang komprehensif, efisien, serta meminimalkan tingkat kesalahan deteksi (*false positive*) [@ResearchGate_AccuracyPrecision]. Lebih dari sekadar pembaruan teknis, implementasi ini bertujuan menjamin integritas akademik di lingkungan Program Studi Sarjana Terapan Teknologi Rekayasa Perangkat Lunak, Politeknik Negeri Bali.
 
 ### **Perumusan Masalah**
 
 Berdasarkan paparan latar belakang di atas, maka rumusan masalah dalam penelitian ini didefinisikan sebagai berikut:
 
-1. Bagaimana merancang arsitektur deteksi kecurangan hibrida berbasis *middleware* pada GZCTF yang efektif tanpa mengorbankan performa dan skalabilitas sistem? [@GitHub_GZCTF] [@Microsoft_Middleware]
-2. Bagaimana mekanisme implementasi *Sequence Similarity Analysis* (LCS) dan *Confidence Screening Detector* (CSD) untuk mendeteksi pola kolaborasi ilegal antar tim? [@PMC_CSD_Collusion, @Medium_LCS_Guide, @GeeksforGeeks_LCS]
-3. Bagaimana merumuskan model *Weighted Risk Scoring* yang optimal untuk menggabungkan indikator teknis (IP, *User-Agent*, *Timestamp*) menjadi skor risiko yang terukur?
-4. Seberapa besar tingkat akurasi dan efektivitas sistem hibrida ini dalam mendeteksi kecurangan dibandingkan dengan metode pemantauan manual? [@ResearchGate_AccuracyPrecision, @UTHM_CTF_Platform]
+1. Bagaimana merancang arsitektur deteksi kecurangan berbasis *middleware* pada GZCTF yang efektif tanpa mengorbankan performa dan skalabilitas sistem?
+2. Bagaimana mekanisme implementasi *Sequence Similarity Analysis* (LCS & Jaccard Similarity) dan *Confidence Screening Detector* (CSD) untuk mendeteksi pola kolaborasi ilegal antar tim?
+3. Bagaimana merumuskan model *Weighted Risk Scoring* yang optimal untuk menggabungkan indikator teknis (IP, *Browser Fingerprint*, *Timestamp*) menjadi skor risiko yang terukur?
+4. Seberapa besar tingkat akurasi dan efektivitas sistem ini dalam mendeteksi kecurangan dibandingkan dengan metode pemantauan manual?
 
 ### **Batasan Masalah**
 
 Penelitian ini dibatasi oleh ruang lingkup sebagai berikut guna menjaga kedalaman dan fokus pembahasan:
 
-1. Platform utama yang digunakan adalah GZCTF versi stabil terbaru yang dioperasikan melalui lingkungan Docker atau Kubernetes [@GitHub_GZCTF].
-2. Analisis kesamaan teks difokuskan pada data log aktivitas submission dan dokumen write-up yang dikirimkan oleh peserta melalui sistem pengumpulan berkas GZCTF [@GitHub_GZCTF].
-3. Parameter perilaku yang dianalisis dalam Weighted Risk Scoring terbatas pada data yang terekam dalam database PostgreSQL GZCTF, meliputi alamat IP (IPv4/IPv6), User-Agent browser, timestamp submission, dan ID tim/user [@GitHub_GZCTF].
-4. Pengembangan sistem dilakukan dengan menggunakan bahasa pemrograman C# untuk bagian middleware dan Python/C# untuk mesin analisis algoritma, serta PostgreSQL sebagai penyimpanan log kecurangan [@GitHub_GZCTF].
-5. Pengujian usability dan fungsionalitas dilakukan dengan melibatkan minimal lima responden yang berperan sebagai penyelenggara kompetisi untuk memvalidasi dashboard monitoring [@UTHM_CTF_Platform].
+1. Platform pengembangan adalah GZCTF berbasis ASP.NET Core yang dijalankan dalam lingkungan kontainerisasi (Docker/Kubernetes).
+2. Lingkup deteksi kecurangan mencakup tiga domain utama:
+    - **Analisis Jaringan**: Deteksi *Cross-Team IP*, *Token Abuse*, *Shared IP*, *Shared Fingerprint*, dan *Unknown IP*.
+    - **Analisis Perilaku**: Identifikasi anomali *Fast Solve* (Open/Download/Container), *Burst Solving*, *Flag Hoarding*, serta *Solve Before Download/Container*.
+    - **Deteksi Kolusi**: Penerapan algoritma *Hybrid Relative Sequence Index* (RSI) yang menggabungkan *Jaccard Similarity* [@travieso2024analyticalapproachjaccardsimilarity] (70%) dan *Longest Common Subsequence* (30%) serta metode *Confidence Screening Detector* (CSD) untuk klastering kelompok kolusi.
+3. Parameter data yang dianalisis bersumber dari log *database* PostgreSQL GZCTF, meliputi alamat IP, *Browser Fingerprint*, waktu *submission*, dan metadata interaksi tantangan (waktu *download/container start*) [@GitHub_GZCTF].
+4. Implementasi sistem dibangun sepenuhnya menggunakan bahasa pemrograman C# (.NET) untuk menjamin performa dan kompatibilitas dengan arsitektur *backend* GZCTF.
+5. Pengujian usability dan fungsionalitas dilakukan dengan melibatkan minimal lima responden yang berperan sebagai penyelenggara kompetisi untuk memvalidasi *dashboard* monitoring kecurangan.
 
 ### **Tujuan Penelitian**
 
 Tujuan yang ingin dicapai melalui pelaksanaan penelitian ini adalah:
 
-1. Membangun modul deteksi kecurangan hibrida yang terintegrasi secara modular dengan GZCTF menggunakan mekanisme *middleware* ASP.NET Core [@CSharpCorner_CustomMiddleware].
-2. Mengimplementasikan algoritma *Sequence Similarity Analysis* dengan metode LCS dan CSD untuk mendeteksi pola kolaborasi ilegal [@PMC_CSD_Collusion, @GeeksforGeeks_LCS].
+1. Membangun modul deteksi kecurangan yang terintegrasi secara modular dengan GZCTF menggunakan mekanisme *middleware* ASP.NET Core [@CSharpCorner_CustomMiddleware].
+2. Mengimplementasikan algoritma *Sequence Similarity Analysis* dengan metode kombinasi *Jaccard Similarity* [@GeeksforGeeks_Jaccard] dan LCS, serta validasi menggunakan CSD untuk mendeteksi pola kolaborasi ilegal [@PMC_CSD_Collusion; @GeeksforGeeks_LCS].
 3. Mengembangkan sistem *Weighted Risk Scoring* untuk melabeli tingkat kecurigaan tim berdasarkan akumulasi anomali perilaku [@PMC_CSD_Collusion].
 4. Mengevaluasi performa sistem menggunakan metrik presisi, *recall*, dan *F1-score* untuk memvalidasi keandalannya dalam mendeteksi kecurangan [@DataCamp_F1Score].
 
@@ -85,31 +51,34 @@ Tujuan yang ingin dicapai melalui pelaksanaan penelitian ini adalah:
 
 Luaran dari penelitian ini diharapkan dapat memberikan kontribusi nyata bagi berbagai pihak:
 
-1. **Bagi Institusi Pendidikan**: Memperkuat integritas ujian praktikum keamanan siber di Politeknik Negeri Bali, menjamin lulusan yang kompeten dan jujur.
-2. **Bagi Penyelenggara CTF**: Mengurangi beban pengawasan manual melalui sistem peringatan dini otomatis yang efisien [@HTB_WhatIsCTF].
-3. **Bagi Komunitas Pengembang**: Menyediakan referensi teknis terkait integrasi *middleware* deteksi kecurangan pada platform berbasis .NET Core dan pengembangan algoritma hibrida [@Medium_CustomMiddleware].
+1. **Bagi Institusi Pendidikan**: Memperkuat integritas ujian praktikum keamanan siber di kancah internasional, menjamin lulusan yang kompeten dan jujur dalam bidang keamanan siber.
+2. **Bagi Penyelenggara CTF**: Mengurangi beban pengawasan manual melalui sistem peringatan dini otomatis yang efisien.
+3. **Bagi Komunitas Pengembang**: Menyediakan referensi teknis terkait integrasi *middleware* deteksi kecurangan pada platform berbasis .NET Core dan pengembangan algoritma deteksi.
 4. **Bagi Mahasiswa**: Memberikan wawasan mendalam mengenai penerapan rekayasa perangkat lunak dalam konteks keamanan informasi dan integritas sistem.
 
 ## **TINJAUAN PUSTAKA**
 
 ### **Penelitian Sebelumnya**
 
-Topik mengenai deteksi kecurangan dan plagiarisme kode sumber terus berkembang dalam riset rekayasa perangkat lunak. Berbagai metode telah dikembangkan, mulai dari analisis atribut sederhana hingga pemodelan graf yang kompleks. Salah satu metode fundamental yang banyak digunakan adalah *Longest Common Subsequence* (LCS) [@Medium_LCS_Guide, @GeeksforGeeks_LCS]. Algoritma ini terbukti efektif dalam mengenali kesamaan urutan karakter antar dataset, yang berguna untuk mendeteksi plagiarisme di mana pelaku mencoba menyamarkan jejak dengan modifikasi kecil tanpa mengubah logika urutan utama [@Wikipedia_LCS, @GeeksforGeeks_LCS].
+Topik mengenai deteksi kecurangan dan plagiarisme terus berkembang dalam riset rekayasa perangkat lunak. Berbagai metode telah dikembangkan, mulai dari analisis atribut sederhana hingga pemodelan graf yang kompleks. Salah satu metode fundamental yang banyak digunakan adalah *Longest Common Subsequence* (LCS) [@Medium_LCS_Guide; @GeeksforGeeks_LCS]. Algoritma ini terbukti efektif dalam mengenali kesamaan urutan karakter antar dataset, yang berguna untuk mendeteksi plagiarisme di mana pelaku mencoba menyamarkan jejak dengan modifikasi kecil tanpa mengubah logika urutan utama [@Wikipedia_LCS; @GeeksforGeeks_LCS].
 
-Sebuah survei sistematis menunjukkan bahwa pendekatan hibrida—yang menggabungkan analisis tekstual dan struktural—cenderung memberikan hasil yang lebih akurat daripada metode tunggal [@Frontiers_PlagiarismSurvey]. Khusus dalam kompetisi seperti CTF, tantangan utamanya bukan sekadar kesamaan kode, melainkan pola penyelesaian tantangan yang mencurigakan. Oleh karena itu, analisis perilaku peserta menjadi aspek krusial yang harus diperhatikan [@Snyk_CTF_Types].
+Sementara LCS berfokus pada aspek sekuensial, penelitian terbaru oleh Travieso et al. (2024) mengenai *Jaccard Similarity* menyoroti pentingnya pendekatan analitis dalam pengukuran kesamaan himpunan. Indeks Jaccard menawarkan metrik yang kuat untuk membandingkan proporsi elemen yang beririsan antara dua himpunan data tanpa bergantung pada urutan entri [@travieso2024analyticalapproachjaccardsimilarity]. Dalam konteks kompetisi, metode ini sangat relevan untuk mendeteksi kesamaan *set of problems* yang diselesaikan oleh peserta, melengkapi analisis urutan yang dilakukan oleh LCS.
 
-Dalam hal deteksi anomali, model *Risk Scoring* yang umum digunakan di industri keuangan terbukti efektif untuk mengidentifikasi penipuan berdasarkan skor risiko tertimbang. Metodologi ini sangat relevan untuk CTF, di mana indikator seperti *flag sharing*, kesamaan IP, dan waktu penyelesaian yang aneh dapat diakumulasi menjadi satu skor risiko. Dengan pendekatan ini, kolaborasi ilegal atau *Test Collusion* dapat dideteksi secara objektif tanpa bergantung pada inspeksi manual yang subjektif [@PMC_CSD_Collusion].
+Penggunaan metode deteksi tunggal seringkali memiliki celah yang dapat dimanfaatkan oleh peserta, semisal penggunaan VPN untuk menyamarkan IP ataupun modifikasi kecil pada urutan tantangan yang diselesaikan. Oleh karena itu, penelitian ini menggabungkan analisis *Jaccard Similarity* dan *LCS* dalam kerangka kerja *Confidence Screening Detector* (CSD) untuk mendeteksi pola kolaborasi ilegal (*collusion*) secara lebih akurat [@PMC_CSD_Collusion].
 
-Konsep *Weighted Risk Scoring* memungkinkan penggabungan berbagai indikator risiko yang berbeda menjadi satu metrik yang mudah dipahami. Dengan memberikan bobot berbeda untuk setiap pelanggaran (misalnya *Stolen Flag* memiliki bobot lebih tinggi daripada *Unknown IP*), sistem ini mengadopsi prinsip penilaian risiko dinamis ala perbankan [@ResearchGate_RiskScoring]. Integrasi metode ini ke dalam platform CTF menawarkan solusi modern untuk menjaga integritas kompetisi.
+Di sisi lain, untuk memverifikasi identitas aktor di balik layar, teknologi *web fingerprinting* menjadi komponen vital. Penelitian komprehensif mengumpulkan berbagai metode pemanfaatan atribut peramban (Canvas, WebGL, AudioContext) untuk membuat tanda tangan unik perangkat tanpa bergantung pada *cookies*, yang memungkinkan sistem mendeteksi manipulasi identitas jaringan oleh peserta [@GitHub_WebFingerprinting; @GitHub_CreepJS].
+
+Seluruh indikator tersebut—baik dari analisis kesamaan solusi maupun jejak perangkat—kemudian diintegrasikan menggunakan model *Weighted Risk Scoring*. Konsep ini memungkinkan penggabungan parameter yang heterogen (seperti *flag sharing*, kesamaan IP, dan nilai *similarity*) menjadi satu metrik risiko terpadu yang dinamis. Dengan pendekatan ini, bobot pelanggaran dapat disesuaikan (misal: *Stolen Flag* lebih berat daripada *Unknown IP*), menghasilkan deteksi yang objektif dan mengurangi ketergantungan pada inspeksi manual.
 
 | **Peneliti** | **Metode** | **Temuan Utama** | **Relevansi** |
 | --- | --- | --- | --- |
-| Singhmantash (2020) | LCS Guide | LCS adalah kunci untuk menyelesaikan masalah pencocokan string dunia nyata. | Dasar algoritma sequence similarity. [@Medium_LCS_Guide, @GeeksforGeeks_LCS] |
-| Meuschke et al. (2025) | Plagiarism Survey | Survei sistematis algoritma deteksi plagiarisme dalam analisis teks. | Referensi metode deteksi hibrida. [@Frontiers_PlagiarismSurvey] |
+| Singhmantash (2020) | LCS Guide | LCS adalah kunci untuk menyelesaikan masalah pencocokan string dunia nyata. | Dasar algoritma sequence similarity. [@Medium_LCS_Guide; @GeeksforGeeks_LCS] |
+| Travieso et al. (2024) | Analytical Jaccard | Pendekatan analitis pada indeks Jaccard untuk pengukuran kesamaan himpunan. | Dasar implementasi deteksi kesamaan himpunan soal. [@travieso2024analyticalapproachjaccardsimilarity] |
 
 | Halm & Rivas (2023) | Collusion Detector | Metode skrining kepercayaan untuk mendeteksi kolaborasi tes. | Validasi konsep deteksi kolaborasi. [@PMC_CSD_Collusion] |
+| Abraham Juliot (2024) | Web Fingerprinting Research | Kompendium metode fingerprinting browser modern dan analisis bot. | Basis teknik deteksi identitas perangkat. [@GitHub_WebFingerprinting; @GitHub_CreepJS] |
 
-Tabel di atas menunjukkan bahwa meskipun setiap metode memiliki kelebihan masing-masing, terdapat kebutuhan nyata untuk menggabungkan kecepatan analisis vektor dengan ketajaman analisis struktural, serta melengkapinya dengan pemantauan perilaku untuk mendapatkan sistem deteksi kecurangan yang benar-benar hibrida dan tangguh [@GitHub_GZCTF].
+Tabel di atas menunjukkan bahwa meskipun setiap metode memiliki kelebihan masing-masing, terdapat kebutuhan nyata untuk menggabungkan kecepatan analisis vektor dengan ketajaman analisis struktural, serta melengkapinya dengan pemantauan perilaku untuk mendapatkan sistem deteksi kecurangan yang benar-benar efektif dan tangguh [@GitHub_GZCTF].
 
 ### **Landasan Teori**
 
@@ -124,7 +93,7 @@ GZCTF menggunakan PostgreSQL sebagai sistem manajemen basis data relasional untu
 Deteksi kolaborasi antar tim dilakukan dengan menganalisis pola urutan penyelesaian soal (*Sequence of Solves*). Pendekatan ini lebih efektif dibandingkan analisis teks konten karena urutan penyelesaian sulit dimanipulasi secara kebetulan, terutama pada kompetisi dengan jumlah soal yang banyak.
 
 **Longest Common Subsequence (LCS)**
-LCS digunakan untuk mencari urutan terpanjang dari ID tantangan yang diselesaikan secara bersamaan oleh dua tim [@Medium_LCS_Guide, @GeeksforGeeks_LCS]. Jika Tim A menyelesaikan soal {1, 3, 5, 7} dan Tim B menyelesaikan {1, 2, 3, 5, 7}, maka LCS mereka adalah {1, 3, 5, 7} dengan panjang 4. Skor kesamaan dihitung berdasarkan rasio panjang LCS terhadap total soal yang diselesaikan.
+LCS digunakan untuk mencari urutan terpanjang dari ID tantangan yang diselesaikan secara bersamaan oleh dua tim [@Medium_LCS_Guide; @GeeksforGeeks_LCS]. Jika Tim A menyelesaikan soal {1, 3, 5, 7} dan Tim B menyelesaikan {1, 2, 3, 5, 7}, maka LCS mereka adalah {1, 3, 5, 7} dengan panjang 4. Skor kesamaan dihitung berdasarkan rasio panjang LCS terhadap total soal yang diselesaikan.
 
 **Confidence Screening Detector (CSD)**
 Metode CSD digunakan untuk mengelompokkan tim yang dicurigai melakukan kolaborasi (*collusion groups*) berdasarkan tingkat kepercayaan atau *confidence*. Algoritma ini menggunakan metrik "Doubt" untuk mengukur seberapa besar kemungkinan seorang peserta (examinee) bukan merupakan bagian dari kelompok kolusi [@PMC_CSD_Collusion]. Semakin kecil nilai *doubt*, semakin besar kemungkinan peserta tersebut adalah anggota kelompok kolusi. Proses skrining dilakukan secara iteratif (*single forward screening*) untuk menemukan batas cutoff yang optimal di mana perbedaan nilai *doubt* mengalami lonjakan signifikan.
@@ -167,7 +136,7 @@ Observasi terhadap arsitektur GZCTF menunjukkan bahwa fitur pemantauan yang ada 
 
 ### **Kebutuhan Fungsional Sistem Baru**
 
-Sistem deteksi kecurangan hibrida yang diusulkan harus memenuhi persyaratan fungsional minimal sebagai berikut:
+Sistem deteksi kecurangan yang diusulkan harus memenuhi persyaratan fungsional minimal sebagai berikut:
 
 1. **Middleware Interceptor**: Sistem wajib memiliki komponen middleware yang mampu mengintersepsi setiap permintaan POST ke endpoint submission flag untuk menangkap data payload, alamat IP, dan metadata browser [@Arxiv_TrainTestOverlap].
 2. **Two-Stage Analysis Engine**:
@@ -175,7 +144,7 @@ Sistem deteksi kecurangan hibrida yang diusulkan harus memenuhi persyaratan fung
 - **Post-Game Analysis Engine**:
     - **IP & Network Analysis**: Mendeteksi *Cross-Team IP*, *Token Abuse*, dan *Shared IP*.
     - **Behavior Analysis**: Mendeteksi anomali seperti *Fast Solve*, *Burst Solving*, dan *No Container/Download*.
-    - **Plagiarism Detection**: Menggunakan algoritma LCS [@GeeksforGeeks_LCS] untuk kesamaan urutan (*Sequence Similarity*) dan *Confidence Screening Detector* (CSD) untuk deteksi kolusi.
+    - **Plagiarism Detection**: Menggunakan algoritma LCS [@GeeksforGeeks_LCS] untuk kesamaan urutan (*Sequence Similarity*) dan *Confidence Screening Detector* (CSD) yang memanfaatkan *Jaccard Similarity* [@travieso2024analyticalapproachjaccardsimilarity] untuk deteksi kolusi.
 1. **Weighted Scoring Processor**: Mesin pengolah yang menghitung total risiko tim berdasarkan bobot variabel yang ditentukan (ISI, SV, UAC) dan menyimpannya ke dalam tabel CheatRisk [@SemanticScholar_ChatGPT_CTF].
 2. **Admin Risk Dashboard**: Antarmuka web yang menyajikan visualisasi tingkat risiko setiap tim, statistik anomali, dan rincian bukti kecurangan yang ditemukan [@Medium_CustomMiddleware].
 3. **Automated Alerting**: Memberikan notifikasi instan kepada admin melalui dashboard jika ada tim yang skor risikonya melonjak secara drastis dalam waktu singkat [@Medium_CustomMiddleware].
@@ -254,9 +223,9 @@ flowchart TD
 | **Prasyarat** | Admin telah login dan memiliki hak akses level 3 (Superadmin/Peneliti) [@GitHub_GZCTF]. |
 | **Alur Utama** | 1. Admin membuka dashboard. 2. Sistem menarik data dari tabel CheatRisk. 3. Sistem merender grafik heatmap IP sharing dan daftar tim berisiko tinggi. 4. Admin meninjau rincian bukti teks yang mirip. |
 
-### **Activity Diagram (Alur Deteksi Hibrida)**
+### **Activity Diagram (Alur Deteksi Kecurangan)**
  
-Alur aktivitas deteksi kecurangan hibrida dijelaskan sebagai berikut:
+Alur aktivitas deteksi kecurangan dijelaskan sebagai berikut:
  
 ```{mermaid}
 flowchart TD
@@ -304,7 +273,7 @@ $$S_{seq} = \frac{|LCS(Seq_A, Seq_B)|}{\min(|Seq_A|, |Seq_B|)}$$
 
 $$doubt_e = \frac{\sum_{s \in S} (RSI_{es} + RSI_{se})}{2 \cdot \#(S)}$$
 
-Dimana $RSI$ adalah *Relative Sequence Index* yang merupakan kombinasi dari Jaccard Similarity dan LCS Score [@GeeksforGeeks_LCS]. Kelompok kolusi ditentukan dengan mencari titik potong (*cutoff*) optimal pada distribusi nilai *doubt* [@PMC_CSD_Collusion].
+Dimana $RSI$ adalah *Relative Sequence Index* yang merupakan kombinasi dari *Jaccard Similarity* [@travieso2024analyticalapproachjaccardsimilarity] dan LCS Score [@GeeksforGeeks_LCS]. Kelompok kolusi ditentukan dengan mencari titik potong (*cutoff*) optimal pada distribusi nilai *doubt* [@PMC_CSD_Collusion].
 
 **Weighted Scoring Formula**
 
@@ -387,7 +356,7 @@ erDiagram
 
 Implementasi sistem akan dilakukan menggunakan tumpukan teknologi (*tech stack*) yang konsisten dengan ekosistem GZCTF [@Medium_CustomMiddleware]:
 
-- **Bahasa & Framework**: C#.NET 8.0 untuk inti middleware, Python 3.10 untuk modul pemrosesan Sequence Analysis (LCS) [@Medium_CustomMiddleware, @GeeksforGeeks_LCS].
+- **Bahasa & Framework**: C#.NET 8.0 untuk inti middleware, Python 3.10 untuk modul pemrosesan Sequence Analysis (LCS) [@Medium_CustomMiddleware; @GeeksforGeeks_LCS].
 - **Database**: PostgreSQL 15 sebagai database utama dan Garnet/Redis untuk *persistent caching* hasil similarity [@Wikipedia_CTF].
 - **Tools**: Visual Studio 2022, PyCharm, Docker Desktop, dan Git untuk manajemen versi [@Wikipedia_CTF].
 - **Integrasi**: Menggunakan SignalR untuk komunikasi asinkron antara backend deteksi dan dashboard frontend [@Medium_CustomMiddleware].
@@ -397,7 +366,7 @@ Implementasi sistem akan dilakukan menggunakan tumpukan teknologi (*tech stack*)
 Proses pembangunan aplikasi mengikuti urutan logis rekayasa perangkat lunak [@IOI_Volume18]:
 
 1. **Pengembangan Middleware**: Membuat class AntiCheatMiddleware yang mengimplementasikan InvokeAsync untuk menangkap HttpContext [@Microsoft_Middleware].
-2. **Mesin Analisis Similarity**: Membangun algoritma LCS dan CSD Screening dalam C# untuk membandingkan pola penyelesaian antar tim secara efisien [@Medium_LCS_Guide, @GeeksforGeeks_LCS].
+2. **Mesin Analisis Similarity**: Membangun algoritma LCS dan CSD Screening dalam C# untuk membandingkan pola penyelesaian antar tim secara efisien [@Medium_LCS_Guide; @GeeksforGeeks_LCS].
 3. **Mesin Penilaian Risiko**: Mengimplementasikan logika Weighted Scoring dalam service C# yang melakukan kueri secara efisien ke database log [@PMC_CSD_Collusion].
 4. **Pembangunan Dashboard**: Mengembangkan antarmuka monitoring menggunakan React (sesuai frontend GZCTF) yang menampilkan metrik risiko secara visual.
 
@@ -411,7 +380,7 @@ Sistem akan diuji secara komprehensif melalui tiga fase pengujian [@IOI_Volume18
 
 ### **Hasil yang Diharapkan**
 
-Sistem deteksi kecurangan hibrida ini diharapkan dapat memberikan hasil konkret berupa:
+Sistem deteksi kecurangan ini diharapkan dapat memberikan hasil konkret berupa:
 
 1. **Aplikasi Middleware**: Sebuah komponen perangkat lunak siap pakai yang dapat diintegrasikan dengan mudah ke platform GZCTF manapun [@Medium_CustomMiddleware].
 2. **Peningkatan Deteksi**: Mampu mendeteksi minimal 90% kasus flag sharing dan plagiarisme teks pada dataset simulasi [@PMC_CSD_Collusion].
