--- a/references.bib
+++ b/references.bib
@@ -1,60 +1,106 @@
 @INPROCEEDINGS {Browser_Fingerprinting,
-author = { Lin, Xu and Araujo, Frederico and Taylor, Teryl and Jang, Jiyong and Polakis, Jason },
-booktitle = { 2023 IEEE Symposium on Security and Privacy (SP) },
-title = {{ Fashion Faux Pas: Implicit Stylistic Fingerprints for Bypassing Browsers' Anti-Fingerprinting Defenses }},
-year = {2023},
-volume = {},
-ISSN = {},
-pages = {987-1004},
-abstract = { Browser fingerprinting remains a topic of particular interest for both the research community and the browser ecosystem, and various anti-fingerprinting countermeasures have been proposed by prior work or deployed by browsers. While preventing fingerprinting presents a challenging task, modern fingerprinting techniques heavily rely on JavaScript APIs, which creates a choke point that can be targeted by countermeasures. In this paper, we explore how browser fingerprints can be generated without using any JavaScript APIs. To that end we develop StylisticFP, a novel fingerprinting system that relies exclusively on CSS features and implicitly infers system characteristics, including advanced fingerprinting attributes like the list of supported fonts, through carefully constructed and arranged HTML elements. We empirically demonstrate our system's effectiveness against privacy-focused browsers (e.g., Safari, Firefox, Brave, Tor) and popular privacy-preserving extensions. We also conduct a pilot study in a research organization and find that our system is comparable to a state-of-the-art JavaScript-based fingerprinting library at distinguishing devices, while outperforming it against browsers with anti-fingerprinting defenses. Our work highlights an additional dimension of the significant challenge posed by browser fingerprinting, and reaffirms the need for more robust detection systems and countermeasures. },
-keywords = {Privacy;Ecosystems;Organizations;Fingerprint recognition;Libraries;Browsers;Security},
-doi = {10.1109/SP46215.2023.10179437},
-url = {https://doi.ieeecomputersociety.org/10.1109/SP46215.2023.10179437},
-publisher = {IEEE Computer Society},
-address = {Los Alamitos, CA, USA},
-month =May}
+  author = { Lin, Xu and Araujo, Frederico and Taylor, Teryl and Jang, Jiyong and Polakis, Jason },
+  booktitle = { 2023 IEEE Symposium on Security and Privacy (SP) },
+  title = {{ Fashion Faux Pas: Implicit Stylistic Fingerprints for Bypassing Browsers' Anti-Fingerprinting Defenses }},
+  year = {2023},
+  volume = {},
+  ISSN = {},
+  pages = {987-1004},
+  abstract = { Browser fingerprinting remains a topic of particular interest for both the research community and the browser ecosystem, and various anti-fingerprinting countermeasures have been proposed by prior work or deployed by browsers. While preventing fingerprinting presents a challenging task, modern fingerprinting techniques heavily rely on JavaScript APIs, which creates a choke point that can be targeted by countermeasures. In this paper, we explore how browser fingerprints can be generated without using any JavaScript APIs. To that end we develop StylisticFP, a novel fingerprinting system that relies exclusively on CSS features and implicitly infers system characteristics, including advanced fingerprinting attributes like the list of supported fonts, through carefully constructed and arranged HTML elements. We empirically demonstrate our system's effectiveness against privacy-focused browsers (e.g., Safari, Firefox, Brave, Tor) and popular privacy-preserving extensions. We also conduct a pilot study in a research organization and find that our system is comparable to a state-of-the-art JavaScript-based fingerprinting library at distinguishing devices, while outperforming it against browsers with anti-fingerprinting defenses. Our work highlights an additional dimension of the significant challenge posed by browser fingerprinting, and reaffirms the need for more robust detection systems and countermeasures. },
+  keywords = {Privacy;Ecosystems;Organizations;Fingerprint recognition;Libraries;Browsers;Security},
+  doi = {10.1109/SP46215.2023.10179437},
+  url = {https://doi.ieeecomputersociety.org/10.1109/SP46215.2023.10179437},
+  publisher = {IEEE Computer Society},
+  address = {Los Alamitos, CA, USA},
+  month =May
+}
+
+@inproceedings{SemanticScholar_ChatGPT_CTF,
+  author = {Pieterse, Heloise},
+  year = {2024},
+  month = {03},
+  pages = {268-276},
+  title = {Friend or Foe – The Impact of ChatGPT on Capture the Flag Competitions},
+  volume = {19},
+  journal = {International Conference on Cyber Warfare and Security},
+  doi = {10.34190/iccws.19.1.1992}
+}
+
+@ARTICLE{PMC_CSD_Collusion,
+  title     = "Confidence screening detector: A new method for detecting test
+               collusion",
+  author    = "Xu, Yongze and Cui, Ying and Wang, Xinyi and Huang, Meiwei and
+               Luo, Fang",
+  abstract  = "Test collusion (TC) is a form of cheating in which, examinees
+               operate in groups to alter normal item responses. TC is becoming
+               increasingly common, especially within high-stakes, large-scale
+               examinations. However, research on TC detection methods remains
+               scarce. The present article proposes a new algorithm for TC
+               detection, inspired by variable selection within
+               high-dimensional statistical analysis. The algorithm relies only
+               on item responses and supports different response similarity
+               indices. Simulation and practical studies were conducted to (1)
+               compare the performance of the new algorithm against the
+               recently developed clique detector approach, and (2) verify the
+               performance of the new algorithm in a large-scale test setting.",
+  journal   = "Appl. Psychol. Meas.",
+  publisher = "SAGE Publications",
+  volume    =  47,
+  number    =  3,
+  pages     = "237--252",
+  month     =  may,
+  year      =  2023,
+  keywords  = "hypothesis testing; plagiarism cheating detection; test
+               collusion; test security",
+  language  = "en"
+}
+
+@misc{LCS_Greenberg,
+      title={Fast and Simple Computation of All Longest Common Subsequences}, 
+      author={Ronald I. Greenberg},
+      year={2011},
+      eprint={cs/0211001},
+      archivePrefix={arXiv},
+      primaryClass={cs.DS},
+      url={https://arxiv.org/abs/cs/0211001}, 
+}
+
+
+// This article serves as a comparative algorithmic survey that mathematically traces the evolution of plagiarism detection, moving from surface-level formulas like Jaccard Similarity (which treats text as overlapping sets to find exact copies) to deep semantic metrics like Cosine Similarity and Wu-Palmer Similarity (which calculate geometric or hierarchical distances to detect paraphrasing and AI-generated content),,,.
+@ARTICLE{Frontiers_PlagiarismSurvey,
+    
+AUTHOR={Amirzhanov, Altynbek  and Turan, Cemil  and Makhmutova, Alfira },
+           
+TITLE={Plagiarism types and detection methods: a systematic survey of algorithms in text analysis},
+          
+JOURNAL={Frontiers in Computer Science},
+          
+VOLUME={Volume 7 - 2025},
+  
+YEAR={2025},
+  
+URL={https://www.frontiersin.org/journals/computer-science/articles/10.3389/fcomp.2025.1504725},
+  
+DOI={10.3389/fcomp.2025.1504725},
+  
+ISSN={2624-9898},
+  
+ABSTRACT={Plagiarism in academic and creative writing continues to be a significant challenge, driven by the exponential growth of digital content. This paper presents a systematic survey of various types of plagiarism and the detection algorithms employed in text analysis. We categorize plagiarism into distinct types, including verbatim, paraphrasing, translation, and idea-based plagiarism, discussing the nuances that make detection complex. This survey critically evaluates existing literature, contrasting traditional methods like string-matching with advanced machine learning, natural language processing, and deep learning approaches. We highlight notable works focusing on cross-language plagiarism detection, source code plagiarism, and intrinsic detection techniques, identifying their contributions and limitations. Additionally, this paper explores emerging challenges such as detecting cross-language plagiarism and AI-generated content. By synthesizing the current landscape and emphasizing recent advancements, we aim to guide future research directions and enhance the robustness of plagiarism detection systems across various domains.}}
+
+@misc{travieso2024analyticalapproachjaccardsimilarity,
+      title={An Analytical Approach to the Jaccard Similarity Index}, 
+      author={Gonzalo Travieso and Alexandre Benatti and Luciano da F. Costa},
+      year={2024},
+      eprint={2410.16436},
+      archivePrefix={arXiv},
+      primaryClass={physics.data-an},
+      url={https://arxiv.org/abs/2410.16436}, 
+}
 
 
 @misc{Microsoft_SignalR_Overview,
   title = "Overview of ASP.NET Core SignalR | Microsoft Learn",
   url = "https://learn.microsoft.com/en-us/aspnet/core/signalr/introduction?view=aspnetcore-10.0",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{Medium_CustomMiddleware,
-  title = "Custom Middleware in .NET Core",
-  url = "https://medium.com/@compileandconquer/custom-middleware-in-net-core-3fad031651ee",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{Wikipedia_CTF,
-  title = "Capture the flag (cybersecurity)",
-  url = "https://en.wikipedia.org/wiki/Capture_the_flag_(cybersecurity)",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{Snyk_CTF_Types,
-  title = "Types of CTF challenges",
-  url = "https://snyk.io/articles/ctf/ctf-types/",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{CTF101_Intro,
-  title = "What is a CTF",
-  url = "https://ctf101.org/intro/what-is-a-ctf/",
-  note = {Accessed: 2026-01-29}
-}
-
-
-@misc{Arxiv_CybersecurityAI,
-  title = "Cybersecurity AI: The World's Top AI Agent for Security Capture-the-Flag (CTF)",
-  url = "https://arxiv.org/pdf/2512.02654",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{GitHub_GZCTF,
-  title = "GZTimeWalker/GZCTF: The GZ::CTF project, an open source CTF platform.",
-  url = "https://github.com/GZTimeWalker/GZCTF",
   note = {Accessed: 2026-01-29}
 }
 
@@ -64,69 +110,15 @@ month =May}
   note = {Accessed: 2026-01-29}
 }
 
-@misc{CSharpCorner_CustomMiddleware,
-  title = "Creating Custom Middleware in ASP.NET Core - The Complete Guide with Real Examples",
-  url = "https://www.c-sharpcorner.com/article/creating-custom-middleware-in-asp-net-core-the-complete-guide-with-real-exa/",
+@misc{CTF101_Intro,
+  title = "What is a CTF",
+  url = "https://ctf101.org/intro/what-is-a-ctf/",
   note = {Accessed: 2026-01-29}
 }
 
-@misc{SemanticScholar_ChatGPT_CTF,
-  title = "Friend or Foe - The Impact of ChatGPT on Capture the Flag Competitions",
-  url = "https://pdfs.semanticscholar.org/029d/4c781cf834c0f0cae882a82abea4f6689dba.pdf",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{Arxiv_TrainTestOverlap,
-  title = "Language model developers should report train-test overlap",
-  url = "https://arxiv.org/html/2410.08385v2",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{Wikipedia_LCS,
-  title = "Longest common subsequence",
-  url = "https://en.wikipedia.org/wiki/Longest_common_subsequence",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{KiteMetric_LCS,
-  title = "Master Dynamic Programming: LCS Algorithm Explained | Kite Metric",
-  url = "https://kitemetric.com/blogs/mastering-dynamic-programming-a-deep-dive-into-longest-common-subsequence",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{IOI_Volume18,
-  title = "volume18.pdf",
-  url = "https://ioinformatics.org/files/volume18.pdf",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{Frontiers_PlagiarismSurvey,
-  title = "Plagiarism types and detection methods: a systematic survey of algorithms in text analysis",
-  url = "https://www.frontiersin.org/journals/computer-science/articles/10.3389/fcomp.2025.1504725/full",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{Medium_LCS_Guide,
-  title = "The Ultimate Guide to Longest Common Subsequence (LCS): The Key to Solving Real-World String Matching Problems | by Singhmantash | Medium",
-  url = "https://medium.com/@singhmantash/the-ultimate-guide-to-longest-common-subsequence-lcs-the-key-to-solving-real-world-string-4309b79c7c45",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{Atlantis_CognitiveNetwork,
-  title = "Cognitive Network Orchestration: Predictive Resilience in Enterprise Supply Chain Systems",
-  url = "https://www.atlantis-press.com/article/126017753.pdf",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{PMC_CSD_Collusion,
-  title = "Confidence Screening Detector: A New Method for Detecting Test Collusion",
-  url = "https://pmc.ncbi.nlm.nih.gov/articles/PMC10126388/",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{ResearchGate_RiskScoring,
-  title = "(PDF) AI-Driven Fraud Detection: A Risk Scoring Model for Enhanced Security in Banking",
-  url = "https://www.researchgate.net/publication/389013363_AI-Driven_Fraud_Detection_A_Risk_Scoring_Model_for_Enhanced_Security_in_Banking",
+@misc{GitHub_GZCTF,
+  title = "GZTimeWalker/GZCTF: The GZ::CTF project, an open source CTF platform.",
+  url = "https://github.com/GZTimeWalker/GZCTF",
   note = {Accessed: 2026-01-29}
 }
 
@@ -136,45 +128,16 @@ month =May}
   note = {Accessed: 2026-01-29}
 }
 
-
-@misc{ResearchGate_AccuracyPrecision,
-  title = "(PDF) Accuracy, precision, recall, f1-score, or MCC? empirical evidence from advanced statistics, ML, and XAI for evaluating business predictive models",
-  url = "https://www.researchgate.net/publication/398511401_Accuracy_precision_recall_f1-score_or_MCC_empirical_evidence_from_advanced_statistics_ML_and_XAI_for_evaluating_business_predictive_models",
-  note = {Accessed: 2026-01-29}
-}
-
-@misc{DataCamp_F1Score,
-  title = "F1 Score in Machine Learning: A Balanced Metric for Precision and Recall",
-  url = "https://www.datacamp.com/tutorial/f1-score",
-  note = {Accessed: 2026-01-29}
-}
-
 @misc{VulDB_GZCTF_XSS,
   title = "CVE-2024-34699 GZTimeWalker GZCTF cross site scripting",
   url = "https://vuldb.com/?id.264018",
   note = {Accessed: 2026-01-29}
 }
 
-@misc{UTHM_CTF_Platform,
-  title = "The Development of System and Content of Capture the Flag (CTF) Platform",
-  url = "https://publisher.uthm.edu.my/periodicals/index.php/aitcs/article/download/16560/6311/120277",
-  note = {Accessed: 2026-01-29}
-}
-@misc{HTB_WhatIsCTF,
-  title = "What is CTF in hacking? Tips & CTFs for beginners by HTB",
-  url = "https://www.hackthebox.com/blog/what-is-ctf",
-  note = {Accessed: 2026-01-29}
-}
 @misc{GZCTF_Dynamic_Flag,
   title = "Feature: Dynamic Flag | GZCTF",
   url = "https://gzctf.gzti.me/guide/features/dynamic-flag.html",
   note = {Accessed: 2026-01-29}
-}
-
-@misc{GeeksforGeeks_LCS,
-  title = "Longest Common Subsequence (LCS) - GeeksforGeeks",
-  url = "https://www.geeksforgeeks.org/dsa/longest-common-subsequence-dp-4/",
-  note = {Accessed: 2026-01-30}
 }
 
 @misc{GitHub_WebFingerprinting,
@@ -188,21 +151,5 @@ month =May}
   title = "Creepy device and browser fingerprinting",
   author = "abrahamjuliot",
   url = "https://github.com/abrahamjuliot/creepjs",
-  note = {Accessed: 2026-01-30}
-}
-
-@misc{travieso2024analyticalapproachjaccardsimilarity,
-      title={An Analytical Approach to the Jaccard Similarity Index}, 
-      author={Gonzalo Travieso and Alexandre Benatti and Luciano da F. Costa},
-      year={2024},
-      eprint={2410.16436},
-      archivePrefix={arXiv},
-      primaryClass={physics.data-an},
-      url={https://arxiv.org/abs/2410.16436}, 
-}
-
-@misc{GeeksforGeeks_Jaccard,
-  title = {Jaccard Similarity - GeeksforGeeks},
-  url = {https://www.geeksforgeeks.org/jaccard-similarity-in-python/},
   note = {Accessed: 2026-01-30}
 }
